--- a/barnehage/templates/commit.html
+++ b/barnehage/templates/commit.html
@@ -1,5 +1,84 @@
-{% extends 'base.html' %}
-
-{% block content %}
-<p>Alle endringene er skrevet til dbexcel!</p>
+{% extends 'base.html' %} {% block content %}
+<h1>Søknader</h1>
+<table border="1">
+  <tr>
+    <th>Id</th>
+    <th>foresatt_1</th>
+    <th>foresatt_2</th>
+    <th>barn_1</th>
+    <th>fr_barnevern</th>
+    <th>fr_syk_familie</th>
+    <th>fr_syk_barn</th>
+    <th>fr_annet</th>
+    <th>barnehage_prioritert</th>
+    <th>sosken__i_barnehagen</th>
+    <th>tidspunkt_oppstart</th>
+    <th>brutto_inntekt</th>
+  </tr>
+  {% for elt in applicants %}
+  <tr>
+    <td>{{ elt.sok_id }}</td>
+    <td>{{ elt.foresatt_1 }}</td>
+    <td>{{ elt.foresatt_2 }}</td>
+    <td>{{ elt.barn_1 }}</td>
+    <td>{{ elt.fr_barnevern }}</td>
+    <td>{{ elt.fr_syk_familie }}</td>
+    <td>{{ elt.fr_syk_barn }}</td>
+    <td>{{ elt.fr_annet }}</td>
+    <td>{{ elt.barnehage_prioritert }}</td>
+    <td>{{ elt.sosken__i_barnehagen }}</td>
+    <td>{{ elt.tidspunkt_oppstart }}</td>
+    <td>{{ elt.brutto_inntekt }}</td>
+  </tr>
+  {% endfor %}
+</table>
+<h1>Barnehager</h1>
+<table border="1">
+  <tr>
+    <th>Id</th>
+    <th>Navn</th>
+    <th>Antall plasser</th>
+    <th>Antall ledige plasser</th>
+  </tr>
+  {% for elt in kg %}
+  <tr>
+    <td>{{ elt.barnehage_id }}</td>
+    <td>{{ elt.barnehage_navn }}</td>
+    <td>{{ elt.barnehage_antall_plasser }}</td>
+    <td>{{ elt.barnehage_ledige_plasser }}</td>
+  </tr>
+  {% endfor %}
+</table>
+<h1>Foresatte</h1>
+<table border="1">
+  <tr>
+    <th>Id</th>
+    <th>Navn</th>
+    <th>Adresse</th>
+    <th>Tlf nr</th>
+    <th>Person nr</th>
+  </tr>
+  {% for elt in foresatte %}
+  <tr>
+    <td>{{ elt.foresatt_id }}</td>
+    <td>{{ elt.foresatt_navn }}</td>
+    <td>{{ elt.foresatt_adresse }}</td>
+    <td>{{ elt.foresatt_tlfnr }}</td>
+    <td>{{ elt.foresatt_pnr }}</td>
+  </tr>
+  {% endfor %}
+</table>
+<h1>Barn</h1>
+<table border="1">
+  <tr>
+    <th>Id</th>
+    <th>Person nr</th>
+  </tr>
+  {% for elt in barn %}
+  <tr>
+    <td>{{ elt.barn_id }}</td>
+    <td>{{ elt.barn_pnr }}</td>
+  </tr>
+  {% endfor %}
+</table>
 {% endblock %}
